--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,13 @@
     ~/.tmux.conf: tmux/tmux.conf
     ~/.vim: vim/vim
     ~/.vimrc: vim/vimrc
-
+    ~/.zshrc: zsh/zshrc
+    ~/.oh-my-zsh: zsh/oh-my-zsh
+    ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions: zsh/zsh-autosuggestions
+    ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: zsh/zsh-syntax-highlighting
+    ~/.ackrc: ack/ackrc
+    ~/.tldrrc: tldr/tldrrc
+    ~/.yarnrc: yarn/yarnrc
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
+    # - [sh -c "$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", Installing Oh My Zsh]
