--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
     ~/.ackrc: ack/ackrc
     ~/.tldrrc: tldr/tldrrc
     ~/.yarnrc: yarn/yarnrc
+    ~/.gdbinit: gdb/gdbinit
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
     # - [sh -c "$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", Installing Oh My Zsh]
