--- a/.gitmodules
+++ b/.gitmodules
@@ -92,3 +92,6 @@
 [submodule "vim/vim/bundle/vim-fugitive"]
 	path = vim/vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim/vim/bundle/vim-zoom"]
+	path = vim/vim/bundle/vim-zoom
+	url = https://github.com/dhruvasagar/vim-zoom.git
